Fix second scrollbar bug

--- a/src/sass/components/sections/_Projects.scss
+++ b/src/sass/components/sections/_Projects.scss
@@ -1,1 +1,3 @@
-#Projects {}
+#Projects {
+    overflow-y: hidden;
+}
