--- a/src/sass/components/sections/_Skills.scss
+++ b/src/sass/components/sections/_Skills.scss
@@ -1,1 +1,3 @@
-#Skills {}
+#Skills {
+    overflow-y: hidden;
+}
