--- a/src/sass/config/_html.scss
+++ b/src/sass/config/_html.scss
@@ -10,7 +10,7 @@ html {
 header {}
 
 body {
-    height: 100%;
+
 }
 
 h1 {
